# FIB-A-CryptoHash

./: .gitignore  CMakeLists.txt  Makefile  MyExperiment1.h  MyResult.h
sources/: BloomFilter.cc  BloomFilter.h  Exp1.cc  Exp1.h  ExpExample.cc  ExpExample.h  ExpFullRandom.cc  ExpFullRandom.h  Experiment.h  MyExperiment.h  MyExperiment1.h  MyResult.h  Timer.cc  Timer.h  bf_example.cc  main.cc  sha256.cc  sha256.h
sources/generator/: gen.cc
src/: BadBloomFilter.cc  BloomFilter.cc  DoubleHashingBF.cc  Execution.cc  main.cc
src/experiments/: CMakeLists.txt
src/experiments/include/: DataGenerator.h  Execution.h  ExpExample.h  ExpOptimalK.h  ExpOptimalM.h  ExpTime.h  ExpUsefulSHA.h  Experiment.h  RandomDataGenerator.h
src/experiments/src/: DataGenerator.cc  Execution.cc  ExpExample.cc  ExpOptimalK.cc  ExpOptimalM.cc  ExpTime.cc  ExpUsefulSha.cc  RandomDataGenerator.cc
src/include/: BadBloomFilter.h  BloomFilter.h  BloomFilters.h  DoubleHashingBF.h
src/test/: bf_example.cc  execution.cc  gen.cc  generator.cc  hashes.cc
src/utils/: CMakeLists.txt
src/utils/include/: RandomString.h  fnv1a.h  jenkins1.h  murmur3.h
src/utils/src/: RandomString.cc  fnv1a.cc  jenkins1.cc  murmur3.cc
